added links in index, manta gallery in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@ This section links to the galleries of the various SDVis components.
   <ul>
 <li>GLuRay (<a href="http://tacc.github.io/GLuRay/gallery.html">tacc.github.io/GLuRay/</a>)</li>
 <li>GraviT (<a href="http://tacc.github.io/GraviT/gallery.html">tacc.github.io/GraviT/</a>)</li>
-<li>Manta (<a href="http://mantawiki.sci.utah.edu">mantawiki.sci.utah.edu</a>)</li>
+<li>Manta (<a href="http://mantawiki.sci.utah.edu/manta/Main_Page#Screen_Shots">mantawiki.sci.utah.edu</a>)</li>
 <li>OpenSWR (<a href="http://openswr.org">openswr.org</a>)</li>
 <li>OSPRay (<a href="http://ospray.github.io/gallery.html">ospray.github.io</a>)</li>
 <li>vtkOSPRay (<a href="http://tacc.github.io/vtkOSPRay/gallery.html">tacc.github.io/vtkOSPRay/</a>)</li>
