--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@ Fortunately, a number of recently-developed software packages capture the improv
 <p>
 The SDVis suite member projects include:
 <ul>
-<li>GLuRay (tacc.github.io/GLuRay)</li>
-<li>GraviT (tacc.github.io/GraviT)</li>
-<li>Manta (mantawiki.sci.utah.edu)</li>
-<li>OpenSWR (openswr.org)</li>
-<li>OSPRay (ospray.github.io)</li>
-<li>vtkOSPRay (tacc.github.io/vtkOSPRay)</li>
+<li>GLuRay (<a href="http://tacc.github.io/GLuRay">tacc.github.io/GLuRay/</a>)</li>
+<li>GraviT (<a href="http://tacc.github.io/GraviT">tacc.github.io/GraviT/</a>)</li>
+<li>Manta (<a href="http://mantawiki.sci.utah.edu">mantawiki.sci.utah.edu</a>)</li>
+<li>OpenSWR (<a href="http://openswr.org">openswr.org</a>)</li>
+<li>OSPRay (<a href="http://ospray.github.io">ospray.github.io</a>)</li>
+<li>vtkOSPRay (<a href="http://tacc.github.io/vtkOSPRay">tacc.github.io/vtkOSPRay/</a>)</li>
 	<ul>
-	<li>pvOSPRay (tacc.github.io/pvOSPRay)</li>
-	<li>visitOSPRay (tacc.github.io/visitOSPRay)</li>
+	<li>pvOSPRay (<a href="http://tacc.github.io/pvOSPRay">tacc.github.io/pvOSPRay/</a>)</li>
+	<li>visitOSPRay (<a href="http://tacc.github.io/visitOSPRay">tacc.github.io/visitOSPRay/</a>)</li>
 	</ul>
 </ul>
 </p>
