added related projects member projects

--- a/related_projects.html
+++ b/related_projects.html
@@ -35,7 +35,7 @@
 
 <h1>Projects using / related to SDVis</h1>
 
-This page gives a brief (and incomplete) list of other projects that
+This page gives a brief (and incomplete) list of the member projects of SDVis, other projects that
 make use of SDVis, as well as a set of related links to other
 projects and related information.
 
@@ -44,6 +44,29 @@ If you have a project that makes use of SDVis and would like this
 to be listed here, please let us know.
 </p>
 
+<h2>Member Projects of SDVis</h2>
+
+<table rules="rows">
+<tr>
+<td style="vertical-align:top">
+The SDVis suite member projects include:
+<ul>
+<li>GLuRay (<a href="http://tacc.github.io/GLuRay">tacc.github.io/GLuRay/</a>)</li>
+<li>GraviT (<a href="http://tacc.github.io/GraviT">tacc.github.io/GraviT/</a>)</li>
+<li>Manta (<a href="http://mantawiki.sci.utah.edu">mantawiki.sci.utah.edu</a>)</li>
+<li>OpenSWR (<a href="http://openswr.org">openswr.org</a>)</li>
+<li>OSPRay (<a href="http://ospray.github.io">ospray.github.io</a>)</li>
+<li>vtkOSPRay (<a href="http://tacc.github.io/vtkOSPRay">tacc.github.io/vtkOSPRay/</a>)</li>
+	<ul>
+	<li>pvOSPRay (<a href="http://tacc.github.io/pvOSPRay">tacc.github.io/pvOSPRay/</a>)</li>
+	<li>visitOSPRay (<a href="http://tacc.github.io/visitOSPRay">tacc.github.io/visitOSPRay/</a>)</li>
+	</ul>
+</ul>
+</p>
+</td>
+</tr>
+</table>
+
 <h2>Projects that use SDVis</h2>
 
 
@@ -51,7 +74,7 @@ to be listed here, please let us know.
   <!-- ======================================================= -->
   <tr>
     <td style="vertical-align:top">
-    <i>Coming Soon</i>
+ <i>Coming Soon</i>
  <!--      <a href="./images/pvOSPRay.png">
 	<img src="./images/pvOSPRay_thumb.png"/ width=200></a></td>
     <td style="vertical-align:top"><h3>"ParaView OSPRay Plugin"</h3>
