--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ The SDVis suite member projects include:
 	<li>pvOSPRay (<a href="http://tacc.github.io/pvOSPRay">tacc.github.io/pvOSPRay/</a>)</li>
 	<li>visitOSPRay (<a href="http://tacc.github.io/visitOSPRay">tacc.github.io/visitOSPRay/</a>)</li>
 	</ul>
+<li>SVBench (tacc.github.io/vis-workloads)</li>
 </ul>
 </p>
 			</div>
