--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ The SDVis suite member projects include:
 	<li>pvOSPRay (<a href="http://tacc.github.io/pvOSPRay">tacc.github.io/pvOSPRay/</a>)</li>
 	<li>visitOSPRay (<a href="http://tacc.github.io/visitOSPRay">tacc.github.io/visitOSPRay/</a>)</li>
 	</ul>
-<li>SVBench (<a href="http://tacc.github.io/vis-workloads"i>tacc.github.io/vis-workloads</a> )</li>
+<li>SVBench (<a href="http://tacc.github.io/vis-workloads">tacc.github.io/vis-workloads</a>)</li>
 </ul>
 </p>
 			</div>
